[package]
name = "parity-local-store"
description = "Manages persistent local node data."
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ethcore = { path = "../ethcore" }
ethcore-io = { path = "../util/io" }
ethcore-transaction = { path = "../ethcore/transaction" }
kvdb = { git = "https://github.com/paritytech/parity-common", rev = "43fc48329f029009dbea48d60a74915a8855c2ab" }
log = "0.4"
rlp = { version = "0.2.4", features = ["ethereum"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
ethcore = { path = "../ethcore", features = ["test-helpers"] }
ethkey = { path = "../ethkey" }
kvdb-memorydb = { git = "https://github.com/paritytech/parity-common", rev = "43fc48329f029009dbea48d60a74915a8855c2ab" }
