[package]
name = "ethcore-service"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
ansi_term = "0.10"
error-chain = { version = "0.12", default-features = false }
ethcore = { path = ".." }
ethcore-io = { path = "../../util/io" }
ethcore-private-tx = { path = "../private-tx" }
ethcore-sync = { path = "../sync" }
ethereum-types = "0.4"
kvdb = { git = "https://github.com/paritytech/parity-common", rev = "3bab9693368011685ec478d2f0d30f795fd2eeb2" }
log = "0.4"
stop-guard = { path = "../../util/stop-guard" }
trace-time = "0.1"

[dev-dependencies]
ethcore = { path = "..", features = ["test-helpers"] }
tempdir = "0.3"
kvdb-rocksdb = { git = "https://github.com/paritytech/parity-common", rev = "3bab9693368011685ec478d2f0d30f795fd2eeb2" }
