[package]
name = "journaldb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A `HashDB` which can manage a short-term journal potentially containing many forks of mutually exclusive actions"
license = "GPL3"

[dependencies]
parity-bytes = "0.1"
ethereum-types = "0.4"
hashdb = "0.2.1"
heapsize = "0.4"
keccak-hasher = { path = "../keccak-hasher" }
kvdb = { git = "https://github.com/paritytech/parity-common", rev = "7273d1099172a85332b99eb30e666c5fd739573e" }
log = "0.4"
memorydb = "0.2.1"
parking_lot = "0.6"
fastmap = { path = "../../util/fastmap" }
rlp = { version = "0.2.4", features = ["ethereum"] }

[dev-dependencies]
ethcore-logger = { path = "../../logger" }
keccak-hash = "0.1"
kvdb-memorydb = { git = "https://github.com/paritytech/parity-common", rev = "7273d1099172a85332b99eb30e666c5fd739573e" }
