[package]
name = "migration-rocksdb"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
macros = { path = "../macros" }
kvdb = { git = "https://github.com/paritytech/parity-common", rev = "ebf6ace293562fc2d866bf115ba2c517e392ada1" }
kvdb-rocksdb = { git = "https://github.com/paritytech/parity-common", rev = "ebf6ace293562fc2d866bf115ba2c517e392ada1" }

[dev-dependencies]
tempdir = "0.3"
