[package]
name = "migration-rocksdb"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
log = "0.4"
macros = { path = "../macros" }
kvdb = { git = "https://github.com/paritytech/parity-common", rev = "3bab9693368011685ec478d2f0d30f795fd2eeb2" }
kvdb-rocksdb = { git = "https://github.com/paritytech/parity-common", rev = "3bab9693368011685ec478d2f0d30f795fd2eeb2" }

[dev-dependencies]
tempdir = "0.3"
