[package]
name = "patricia-trie-ethereum"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Merkle-Patricia Trie (Ethereum Style)"
license = "GPL-3.0"

[dependencies]
patricia-trie = { git = "https://github.com/paritytech/parity-common", branch = "ng-test-db-restore" }
keccak-hasher = { path = "../keccak-hasher" }
hashdb = { git = "https://github.com/paritytech/parity-common", branch = "ng-test-db-restore" }
rlp = { git = "https://github.com/paritytech/parity-common", branch = "ng-test-db-restore" }
parity-bytes = { git = "https://github.com/paritytech/parity-common", branch = "ng-test-db-restore" }
ethereum-types = "0.3"
elastic-array = "0.10"